--- a/Views/ProductDetails.html
+++ b/Views/ProductDetails.html
@@ -7,10 +7,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" src="css/ProductDetails.css">
-    <link rel="stylesheet" href="css/footer.css" >
+    <!-- <link rel="stylesheet" href="css/footer.css" > -->
+    <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/bootstrap-icons.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="/Config/Constants.js" defer></script>
+
     <!-- <link rel="stylesheet" src="./Views/css/home.css"> -->
      <style>
         #Delivery{
@@ -88,86 +91,8 @@
 
 
 
-
-
-      
-
-     <div class="container mt-5" id="container">
-        <div class="row">
-            <!-- Product Images -->
-            <div class="col-md-6 mb-4 d-flex justify-content-center align-items-center product-img">
-                <img src="./Images/Product/Untitled.jpg" alt="Product" class="img-fluid rounded mb-3 product-image" id="mainImage">
-            </div>
-    
-            <!-- Product Details -->
-            <div class="col-md-6">
-                <h2 class="mb-3">Black Canon Camera</h2>
-                <p class="text-muted mb-4">SKU: WH1000XM4</p>
-                <div class="mb-3">
-                    <span class="h4 me-2">$349.99</span>
-                </div>
-                <div class="mb-3">
-                    <i class="bi bi-star-fill text-warning"></i>
-                    <i class="bi bi-star-fill text-warning"></i>
-                    <i class="bi bi-star-fill text-warning"></i>
-                    <i class="bi bi-star-fill text-warning"></i>
-                    <i class="bi bi-star-half text-warning"></i>
-                    <span class="ms-2">4.5 (120 reviews)</span>
-                </div>
-                <p class="mb-4">Black Canon Camera</p>
-                <div class="mb-4">
-                    <!-- Quantity Input -->
-                    <div class="input-group mb-3" style="max-width: 200px;">
-                        <button class="btn btn-outline-dark btn-sm" type="button" onclick="decreaseQuantity()">-</button>
-                        <input type="text" class="form-control form-control-sm text-center quantity-input" value="1" aria-label="Quantity">
-                        <button class="btn btn-outline-dark btn-sm" type="button" onclick="increaseQuantity()">+</button>
-                    </div>
-                
-                    <!-- Buttons -->
-                    <button class="btn btn-danger btn-lg mb-3 me-2">
-                        <i class="bi bi-cart-plus"></i> Add to Cart
-                    </button>
-                </div>
-                <div class="mt-4 mb-4" id="Delivery">
-                    <div class="d-flex align-items-center">
-                        <i class="bi bi-truck icon"></i>
-                        <div>
-                    <h5> Free Delivery</h5>
-                    <p class="small">Enter your promo code for Delivery Availabity</p>
-                        </div>    
-                </div>
-                    <hr>
-                    <div class="d-flex align-items-center">
-                        <i class="bi bi-arrow-left-right icon"></i>
-                        <div>
-                    <h5>Return Delivery</h5>
-                    <p class="small">Free 30 Days Delivery Returns. </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
- 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <!-- Footer -->
-<footer class="footer">
+<footer class="footer mt-5">
     <div class="container">
         <div class="row">
             <div class="col-lg-4 footer-section">
